--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f64da24fbd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56b43dfe50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64da225990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64da225b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56b40e5b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56b40e5d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64da7c4390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64da7c4590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56b468a590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56b468a790&gt;]</pre>
 </div>
 
 </div>
