--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84daf09f90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f56fd2de6d0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f84daf31610&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f84daf55c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56fcfd1950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56fcfd1b50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f84db54ab10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f84db4fd610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f56fd571390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f56fd571590&gt;]</pre>
 </div>
 
 </div>
