--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6b32eb2050&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9974ab0910&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b32b83850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b32b83a50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f9973ba7950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9973ba7b50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6b33123190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6b33123390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f99741822d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f99741824d0&gt;]</pre>
 </div>
 
 </div>
