--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc92ce20610&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7d952c3350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc92caf4890&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc92caf4a90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d94fc9a50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7d94fc9c50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc92d0ce2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc92d0ce4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7d95570390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7d95570590&gt;]</pre>
 </div>
 
 </div>
