--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f41420dfe10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb88ba94d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4141dc5b90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4141dc5d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb88b79ba10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb88b79bc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f414236c4d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f414236c6d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb88bd40450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb88bd40650&gt;]</pre>
 </div>
 
 </div>
