--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4ce5296590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4a2e294350&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ce52647d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ce52649d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a2e267b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a2e267d50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4ce58071d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4ce58073d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4a2e80a510&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4a2e80a710&gt;]</pre>
 </div>
 
 </div>
