--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7473a06250&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f47fe4ad590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f74739a0910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f74739a0b10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47fe5029d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47fe502bd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7473f79390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7473f79590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f47feaa03d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f47feaa05d0&gt;]</pre>
 </div>
 
 </div>
