--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f68271b0090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1970342d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6827180a50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6827180c50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1970049a90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1970049c90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6827726490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6827726690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f19705f0490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f19705f0690&gt;]</pre>
 </div>
 
 </div>
