--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4a4930d50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07a48a7f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4a463ba10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd4a463bc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07a4910ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07a4910cd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4a4c2af10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd4a4bde610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07a4eb34d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07a4eb36d0&gt;]</pre>
 </div>
 
 </div>
