--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f1a346b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff38c799210&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f1a030750&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f1a030950&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff38c484950&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff38c484b50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f1a5d61d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3f1a5d63d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff38ca25290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff38ca25490&gt;]</pre>
 </div>
 
 </div>
