--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc7d801f1d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7798e36f50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7d7d26b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7d7d26d90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7798b1ba10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7798b1bc10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc7d82cc550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc7d82cc790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f77990c1390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f77990c1590&gt;]</pre>
 </div>
 
 </div>
