--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7798e36f50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb758479590&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7798b1ba10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7798b1bc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb72c6578d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb72c657b10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f77990c1390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f77990c1590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb72cbf7290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb72cbf74d0&gt;]</pre>
 </div>
 
 </div>
