--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fcf9200a650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7a9c561ed0&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf9202b910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcf9202bb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a9c2a8850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a9c2a8a90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fcf926042d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fcf926044d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7a9c848290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7a9c8484d0&gt;]</pre>
 </div>
 
 </div>
