--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3df8871c90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8d004b1d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3df85609d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3df8560bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d001b8b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d001b8d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3df8b03350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3df8b03550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8d0075e450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8d0075e650&gt;]</pre>
 </div>
 
 </div>
