--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f160263ff50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f246489aa10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1602348a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1602348c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f24645bf850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f24645bfa90&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f16028ee390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f16028ee590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2464b60150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2464b60390&gt;]</pre>
 </div>
 
 </div>
