--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f246489aa10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4914ef1f10&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f24645bf850&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f24645bfa90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4914bf6ad0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4914bf6d10&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2464b60150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2464b60390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f491519c490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f491519c6d0&gt;]</pre>
 </div>
 
 </div>
