--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6487f38f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f74ac29ef50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6487f0e910&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6487f0eb10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74abfad9d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74abfadbd0&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f64884ae2d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f64884ae4d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f74ac54c410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f74ac54c610&gt;]</pre>
 </div>
 
 </div>
