--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f307b47a3d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e27160a50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f307b1a1550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f307b1a1750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e26e67350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e26e67550&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f307b6ffe50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f307b70b050&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e273c4c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1e273c4e50&gt;]</pre>
 </div>
 
 </div>
