--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1e27160a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1bbe502d50&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e26e67350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e26e67550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bbe553590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1bbe553790&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1e273c4c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1e273c4e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1bbeab2e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1bbeab2fd0&gt;]</pre>
 </div>
 
 </div>
