--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13577,7 +13577,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3e83066710&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f9aeec090&gt;</pre>
 </div>
 
 </div>
@@ -13680,8 +13680,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e82d19350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3e82d19550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f9af1e850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f9af1ea50&gt;]</pre>
 </div>
 
 </div>
@@ -13730,8 +13730,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3e832d8c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3e832d8e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f9b168050&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f9b168250&gt;]</pre>
 </div>
 
 </div>
